--- a/index.html
+++ b/index.html
@@ -5,11 +5,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mac Book Pro</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-
+    <header></header>
+    <main>
+        <section class="mx-auto py-4">
+            <div class="container px-4">
+                <div class="row gx-5">
+                    <div class="col">
+                        <img class="w-100" src="images/mac.png" alt="">
+                    </div>
+                    <div class="col">
+                        <div>
+                            <h1>Customize your Blue 24-inch iMac with Apple M1 chip.</h1>
+                            <p>Apple M1 chip with 8‑core CPU, 8‑core GPU, and 16‑core Neural Engine 8GB unified memory
+                                256GB
+                                SSD storage 13-inch Retina display with True Tone Backlit Magic Keyboard - US English
+                                Touch
+                                Bar and Touch ID Two Thunderbolt / USB 4 ports</p>
+                        </div>
+                        <div class="py-4">
+                            <h4>Memory</h4>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">8GB unifield
+                                memory</button>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">16GB unifield
+                                memory</button>
+                        </div>
+                        <div>
+                            <h4>Storage</h4>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">256GB SSD
+                                storage</button>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">256GB SSD
+                                storage</button>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">1TB SSD storage</button>
+                        </div>
+                        <div class="py-4">
+                            <h4>Choose your delivery option</h4>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">Friday, Aug 25 FREE
+                                prime delivery</button>
+                            <button type="button" class="btn btn-light btn-outline-dark btn-sm">Friday, Aug 21 delivery
+                                charge $20</button>
+                        </div>
+                        <div class="row gx-5 mx-auto p-1">
+                            <div class="col">
+                                <h6 class="fw-bold">Best Price</h6>
+                            </div>
+                            <div class="col">
+                                <h6 class="fw-bold">$1299</h6>
+                            </div>
+                        </div>
+                        <div class="row gx-5 mx-auto p-1">
+                            <div class="col">
+                                <h6 class="fw-bold">Extra Memory Cost</h6>
+                            </div>
+                            <div class="col">
+                                <h6 class="fw-bold">$0</h6>
+                            </div>
+                        </div>
+                        <div class="row gx-5 mx-auto p-1">
+                            <div class="col">
+                                <h6 class="fw-bold">Extra Storage Cost</h6>
+                            </div>
+                            <div class="col">
+                                <h6 class="fw-bold">$0</h6>
+                            </div>
+                        </div>
+                        <div class="row gx-5 mx-auto p-1">
+                            <div class="col">
+                                <h6 class="fw-bold">Delivery Charge</h6>
+                            </div>
+                            <div class="col">
+                                <h6 class="fw-bold">$0</h6>
+                            </div>
+                        </div>
+                        <hr class="border border-dark">
+                        <div class="row gx-5 mx-auto p-1">
+                            <div class="col">
+                                <h6 class="fw-bold">Total</h6>
+                            </div>
+                            <div class="col">
+                                <h6 class="fw-bold">$1299</h6>
+                            </div>
+                        </div>
+                        <div>
+                            <p class="fw-bold">Add Pomo code</p>
+                            <div class="mb-3">
+                                <input type="text" placeholder="add your pomo code">
+                                <button class="btn btn-danger" type="button">Button</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mx-auto text-center">
+            <hr class="border border-dark">
+            <div class="d-inline-block px-1">
+                <h1>Total:</h1>
+            </div>
+            <div class="d-inline-block">
+                <h1>$1200</h1>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- Internal JS -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
